2/18/2023: Karl
- in store, created transformGeneratedCommentToCommunicationComment
- in store, created NewComment
- CreateComment and GetCommentByID generated funcs
- HandleCommandCommentReply
- fixed nextResponse bug: next responses weren't clearing after succesful responses and front ends were receiving all old responses
- Page is now responsible for calling user.SetPage 
- Page.NewComment 
- New CLI functions for page manager, such as GetPageInfo and GetPagesList
- route_newComment.go


2/17/2023: Karl
- Page.GetComments 
- HandleCommandGetComments in guest and member controllers (separate, because different maps get updated)
- endpoint listener
- path extract regex in package util, and unit tests (pretty tough regex to right, and we should test it more!)
- store.GetComments now handles performing multiple queries to construct appropriate comment responses
- generated path, domain, and comment code (comments.sql, domains.sql, paths.sql, comments.sql.go, domains.sql.go, paths.sql.go)
- changed page struct to break domain, path, pathID into separate things.
- All member page transfers now occur in pageManager, not in member controllers. 
- Member controllers are, however, still ultimately responsible for passing themselves to the Page to populate their response with comments. 


2/16/2023: Karl
- Comm entities: Comment, CommentVoteDimension, CommentReply, CommentVote, GetCommnets
- PageManager started
- Page started 
- Added GetPage() to UC interface & implemented in Base 
- Started route_getComments, HandleGetComments, getComments, etc.
- Resetting password from code now deletes code in db 



2/12/2023: Karl
- ChangeEmail, ChangeProfile blurb
- Logout
- Added comm entities necessary for correct client side communication


2/10/2023: Karl
 - Added the login pipeline.
    - Had to do major work including changing the way a token is transmitted from being a cookie to being an actual server object that comes back on the response.