@@ -1,3 +1,8 @@
+2/18/2023: All group members
+- Fixed null-comment bugs ( making the slice was starting with empty structs, capacity was being passed in as length)
+- Fixed no comments being pulled from database (comment.sql error) ; was querying based on comment id not path id 
+- Make all domains and paths lowercase for consistency
+
 2/18/2023: Karl
 - in store, created transformGeneratedCommentToCommunicationComment
 - in store, created NewComment
